# SocketCAN

./: CMakeLists.txt  CacheRecv.cpp  CacheRecv.h  CacheThread.cpp  CacheThread.h  CanDB.cpp  CanDB.h  CanSocket.cpp  CanSocket.h  main.cpp  setup_vcan0.sh  timer.h
Common/: CNF_CAN.h  CNF_CLASS_CAN.h  Common.cpp  Common.h  SafeQueue.h  Tx.h
GenCANStruct/: conf.json  genCanConfig.py  main.py  test.cpp
GenCANStruct/templates/: CAN_DBC.jinja  define_can_template.jinja  new_gen.jinja
